--- a/src/Nibo.Prova.Asp.Web.Presentation/Views/Shared/_Layout.cshtml
+++ b/src/Nibo.Prova.Asp.Web.Presentation/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Nibo.Prova.Asp.Web.Presentation - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - Prova - NIBO - Artur Araújo Santos Ribeiro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
